helm-values/ingress/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpplr-aws-services-alb-ingress
  namespace: test
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:693891728731:certificate/99b3286a-619f-478e-bb7d-480efd1e6e0e
    alb.ingress.kubernetes.io/group.name: ingress-dev-2
    alb.ingress.kubernetes.io/load-balancer-name: ingress-alb-dev-2
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=simmplr-audit-log-159693656053-us-west-2,access_logs.s3.prefix=nonprod/alb-ingress
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/subnets: 	subnet-020d04c2deffb4956,subnet-0cc9e4551ac042994,subnet-0a861e33d660cfade 
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/tags: Environment=nonprod,Team=devops
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - host: ec.test.simpplr.xyz
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: ssl-redirect
              port:
                name: use-annotation
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: ec-odin-service # Make sure you name the service correctly by checking the name of it nginx ingress controller service nothing else
              port:
                number: 80
